@@ -14,6 +14,10 @@ VST1.8 {D0[]}, [R0]
 VST2.8 {D0[], D2[]}, [R0]
 VST3.16 {D0[], D1[], D2[]}, [R0]
 VST4.32 {D0[], D1[], D2[], D3[]}, [R0]
+VLD1.8 {Q0}, [R0, #8]
+VLD1.8 {Q0}, [R0, #8]!
+VLD1.8 {Q0}, [R0, R1]
+VLD1.8 {Q0}, [R0, R1]!
 .thumb
 VLD1.8 {d0}, 2f
 2:
